[package]
name = "muuzika-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
derive_more = "0.99.17"
futures-util = "0.3.28"
jsonwebtoken = "8.3.0"
log = "0.4.20"
nanoid = "0.4.0"
pretty_env_logger = "0.5.0"
rand = "0.8.5"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
thiserror = "1.0.49"
tokio = { version = "1.32.0", features = ["full"] }
tokio-stream = "0.1.14"
warp = "0.3.6"
